# input-toi-demo

./: .gitignore  .gitmodules  CMakeLists.txt
src/: .clang-format  .vimrc  .ycm_extra_conf.py
src/utility/: Alloc.h  CMakeLists.txt  CallbackConfig.cpp  CallbackConfig.h  Colors.h  Colours.h  Config.cpp  Config.h  ConfigManager.cpp  ConfigManager.h  GameTimer.cpp  GameTimer.h  Handle.h  Logger.cpp  Logger.h  PlatformDefinitions.h  UtilityLibraryDefine.h
